[metadata]
name = hippp_website_parser
version = 0.0.2
author = Colm Brandon
author_email = colm.brandon@ul.ie
description  = Contains various sibs for handling the website parsing in the HIPPP pipeline
long_description = file: README.md 
long_description_content_type = text/markdown
url = ''
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

